Fix twoslash popups overflowing parent container

--- a/www/docs/src/styles/starlight.css
+++ b/www/docs/src/styles/starlight.css
@@ -195,3 +195,11 @@ button[aria-label="Menu"][aria-controls="starlight__sidebar"] {
 a {
 	text-decoration: none;
 }
+
+aside.right-sidebar-container {
+	z-index: 8;
+}
+
+.main-pane {
+	z-index: 9;
+}
