--- a/www/docs/src/styles/twoslash.css
+++ b/www/docs/src/styles/twoslash.css
@@ -2,7 +2,6 @@
 	white-space: nowrap !important;
 	word-break: normal !important;
 	overflow-wrap: normal !important;
-	max-width: 512px !important;
 	width: max-content !important;
 }
 
@@ -43,20 +42,6 @@
 .twoslash-popup-docs.twoslash-popup-docs-tags {
 	font-size: 14px !important;
 	margin: 0 !important;
-}
-
-.twoslash-popup-docs-tag-value code:first-of-type {
-	margin-right: .75rem !important;
-}
-
-.twoslash-popup-docs-tag-value code:first-of-type:not(:has(.shiki)):not(.shiki code)::after {
-	content: "—";
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	right: -.75rem;
-	color: var(--sl-color-gray-2) !important;
-	--shiki-dark: var(--sl-color-gray-2);
 }
 
 .twoslash-popup-container {
